--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -22,4 +22,15 @@
 
     <include layout="@layout/content_users" />
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/progressBar"
+        style="@style/SpinKitView.FadingCircle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/btn_lmedium_height"
+        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:background="@android:color/transparent"
+        android:padding="@dimen/min_padding"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/colorWhite" />
+
 </android.support.design.widget.CoordinatorLayout>
