--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -34,7 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/img" />
+                    android:background="@drawable/img" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
